# keapi

./: .gitattributes  .gitignore  CHANGES  LICENSE  Makefile.am  README.md  configure.ac  keapi.pc.in
.github/workflows/: build.yml
docs/: CONFIGURATION_FILES_FORMAT
include/: PlatformDependence.h  globals.h  keapi.h  keapi_defs.h  keapi_inc.h  linux_support.h  pcihdr.h  sm_bus.h  storage_picmg.h
include/eapi/: CBCEEPROM.h  COM0EEP.h  EApi.h  EApiCOM0.h  EApiCommon.h  EApiEPIC.h  EApiETX.h  EApiLib.h  EApiMOPS.h  EApiPISA.h  EApiQ7.h  EApiTCA.h  EeeP.h  LibVer.h  PNPID.h
include/eapi/linux/: EApiOs.h
include/eapi/masm/: EApi.inc  EApiConv.h  EApiConv.inc  EApiMacro.inc  EeeP.inc  EeePConv.h  EeePConv.inc  h2inc.h
include/eapi/vxWorks/: EApiOs.h
include/eapi/wince/: EApiOs.h  inttypes.h
include/eapi/winnt/: EApiOs.h  inttypes.h  stdint.h
include/jida/: JWinDefs.h  Jida.h
src/: JidaWrapper.c  Message.c  PicmgWrapper.c  PlatformDependence.c  addon.c  battery.c  board.c  cpu_arm.h  cpu_perf.c  disks.c  display.c  fan.c  globals.c  gpio_pins.c  i2c.c  ids_database.h  interp.c  intruder.c  keapi.c  keapiNative.c  keapiNative.h  keapi_errors.c  libinit.c  linux_support.c  mem.c  network.c  pci.c  sm_bus.c  spi.c  storage.c  storage_picmg.c  temperature.c  voltage.c  wd.c
